rules/5G-egress-ingress-defined/test/default-policy/input/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2024-11-05T12:23:35Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: configmanagement.gke.io
    configsync.gke.io/declared-version: v1alpha1
    workload.nephio.org/oai: smf
  name: smf-core
  namespace: oai-core
  ownerReferences:
  - apiVersion: workload.nephio.org/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: NFDeployment
    name: smf-core
    uid: 439efa56-99b3-4d9d-9af0-9a45de6c03da
  resourceVersion: "59413"
  uid: bedf87aa-8fee-40fb-96ce-3000a330b318
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/managed-by: configmanagement.gke.io
      configsync.gke.io/declared-version: v1alpha1
      workload.nephio.org/oai: smf
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name": "smf-core-n4", "interface": "n4",
          "ips": ["172.1.1.254/24"], "gateway": ["172.1.1.1"]}]'
      creationTimestamp: null
      labels:
        app.kubernetes.io/managed-by: configmanagement.gke.io
        configsync.gke.io/declared-version: v1alpha1
        workload.nephio.org/oai: smf
    spec:
      containers:
      - command:
        - /openair-smf/bin/oai_smf
        - -c
        - /openair-smf/etc/smf.yaml
        - -o
        image: docker.io/oaisoftwarealliance/oai-smf:v2.0.1
        imagePullPolicy: IfNotPresent
        name: smf-core
        ports:
        - containerPort: 8805
          name: n4
          protocol: UDP
        - containerPort: 80
          name: sbi
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /openair-smf/etc
          name: configuration
      dnsPolicy: ClusterFirst
      initContainers:
      - command:
        - sh
        - -c
        - until curl --connect-timeout 1 --head -X GET http://oai-nrf/nnrf-nfm/v1/nf-instances?nf-type='NRF'
          --http2-prior-knowledge; do echo waiting for nrf svc oai-nrf to respond;
          sleep 1; done
        image: docker.io/alpine/curl:3.14
        imagePullPolicy: IfNotPresent
        name: init
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsGroup: 0
        runAsUser: 0
      serviceAccount: smf-core
      serviceAccountName: smf-core
      terminationGracePeriodSeconds: 5
      volumes:
      - configMap:
          defaultMode: 420
          name: smf-core
        name: configuration
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-11-05T12:23:50Z"
    lastUpdateTime: "2024-11-05T12:23:50Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-11-05T12:23:35Z"
    lastUpdateTime: "2024-11-05T12:23:50Z"
    message: ReplicaSet "smf-core-59bcf4576c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
